Fixed issue with targetPlatformMaterializer and spaces in path.